Bug 158589 - Incorrect line wrapping in the middle of a word
Summary: Incorrect line wrapping in the middle of a word
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: composer (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: Compiled Sources Linux
: HI normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-02-29 19:36 UTC by Derek Huskisson
Modified: 2008-03-15 16:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Derek Huskisson 2008-02-29 19:36:03 UTC
Version:            (using Devel)
Installed from:    Compiled sources
Compiler:          gcc version 4.1.2 (Gentoo 4.1.2 p1.0.2) 
OS:                Linux

When entering text into kmail's composer body, with wrap-around set to 79,  wrap around occurs, but it occurs after 79 characters and doe not occur at a convinient place such as a space.
Comment 1 Derek Huskisson 2008-02-29 19:36:51 UTC
svn is about 779860
Comment 2 Thomas McGuire 2008-03-01 13:50:59 UTC
Confirmed.
Comment 3 Thomas McGuire 2008-03-15 16:14:08 UTC
SVN commit 785915 by tmcguire:

Make wordwrap in KMail work correctly again.

Also:
- Move some wordwrap-related functions to KMeditor
- Remove some commented-out code

BUG: 158589


 M  +0 -16     kmail/kmcomposereditor.cpp  
 M  +0 -2      kmail/kmcomposereditor.h  
 M  +4 -35     kmail/kmcomposewin.cpp  
 M  +4 -6      kmail/kmcomposewin.h  
 M  +5 -9      kmail/messagecomposer.cpp  
 M  +5 -3      knode/kncomposer.cpp  
 M  +25 -6     libkdepim/kmeditor.cpp  
 M  +20 -2     libkdepim/kmeditor.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=785915