Make wordwrap in KMail work correctly again.

Also:
- Move some wordwrap-related functions to KMeditor
- Remove some commented-out code

BUG: 158589

svn path=/trunk/KDE/kdepim/knode/; revision=785915