libkdepim-copy/kmeditor.cpp
@@ -597,13 +597,16 @@ KUrl KMeditor::insertFile( const QStringList &encodingLst, QString &encodingStr 
   return u;
 }
 
-void KMeditor::wordWrapToggled( bool on )
+void KMeditor::enableWordWrap( int wrapColumn )
 {
-  if ( on ) {
-    setLineWrapMode( QTextEdit::FixedColumnWidth );
-  } else {
-    setLineWrapMode (QTextEdit::NoWrap );
-  }
+  setWordWrapMode( QTextOption::WordWrap );
+  setLineWrapMode( QTextEdit::FixedColumnWidth );
+  setLineWrapColumnOrWidth( wrapColumn );
+}
+
+void KMeditor::disableWordWrap()
+{
+  setLineWrapMode( QTextEdit::WidgetWidth );
 }
 
 void KMeditor::contextMenuEvent( QContextMenuEvent *event )
@@ -1146,6 +1149,22 @@ void KMeditor::showSpellConfigDialog( const QString &configFileName )
 #endif
   dialog.setWindowIcon( KIcon( "internet-mail" ) );
   dialog.exec();
+}
+
+QString KMeditor::toWrappedPlainText() const
+{
+  QString temp;
+  QTextDocument* doc = document();
+  QTextBlock block = doc->begin();
+  while ( block.isValid() ) {
+    QTextLayout* layout = block.layout();
+    for ( int i = 0; i < layout->lineCount(); i++ ) {
+      QTextLine line = layout->lineAt( i );
+      temp += block.text().mid( line.textStart(), line.textLength() ) + '\n';
+    }
+    block = block.next();
+  }
+  return temp;
 }
 
 #include "kmeditor.moc"
